--- a/css/3style.css
+++ b/css/3style.css
@@ -74,7 +74,7 @@ header{
    color:black;
    text-align: center;
    /* width: 50%; */
-   margin:  0 0 0 auto;
+   margin: auto;
    /* 上下右左 */
    height: 30px;
    width: 50px;
