--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,7 @@ img.logo{
   color:black;
   text-align: center;
   /* width: 50%; */
-  margin:  0 0 0 auto;
+  margin: auto;
   /* 上下右左 */
   height: 30px;
   width: 50px;
