--- a/css/1style.css
+++ b/css/1style.css
@@ -19,13 +19,8 @@ body {
   /* width: 100%; */
   min-height: 600px;
   min-width: 900px;
-
-
- 
  /* background-image: url(./photos/mb2.png);
 background-position: center center;  */
-
-
 /* background-repeat: no-repeat; */
 /* background-repeat: repeat;
  
@@ -252,8 +247,8 @@ footer{
      width: 100%; 
      padding: 5px;
      height: auto;
-     /* background:black; */
-     background: rgb(236, 236, 236);
+     background:black;
+     /* background: rgb(236, 236, 236); */
      z-index: 2;
      opacity: 0.9;
     /* justify-content: center; */
