--- a/css/1style.css
+++ b/css/1style.css
@@ -317,7 +317,7 @@ footer{
   }
   
   .photo{
-    margin-top: 0;
+    margin-top: 20%;
     width:100%;
     margin-left: auto; 
     margin-right: auto; 
