--- a/css/1style.css
+++ b/css/1style.css
@@ -19,8 +19,9 @@ body {
   /* width: 100%; */
   min-height: 600px;
   min-width: 900px;
- /* background-image: url(./photos/mb2.png);
-background-position: center center;  */
+ /* background-image: url(../photos/30.jpeg); */
+background-position: center center; 
+
 /* background-repeat: no-repeat; */
 /* background-repeat: repeat;
  
@@ -189,7 +190,7 @@ img.logo{
 }
 .photo{
   margin-top: 60%;
-  margin-bottom: 60%;
+  margin-bottom: 0%;
   /* width: 800px; */
   width:100%;
   margin-left: auto; 
@@ -198,13 +199,33 @@ img.logo{
   transition-duration: 1s;
   /* opacity: 0.1; */
   /* margin-top: 40%; */
-  
 }
+/* .photo0{
+  margin-top: 0%;
+  margin-bottom: 70%;
+  width:100%;
+  margin-left: auto; 
+  margin-right: auto; 
+  filter: none;
+  transition-duration: 1s;
+} */
 
 .photo:hover{
   filter: grayscale(0);
   opacity: 1;
 }
+p{
+  text-align: center;
+}
+.photolast{
+  margin-left: 35%;
+  margin-right: 35%;
+  margin-top: 10%;
+  margin-bottom:30% ;
+  width: 30%;
+
+}
+
 
 footer{
   display:flex !important;
@@ -324,6 +345,7 @@ footer{
     filter: none;
     transition-duration: 1s;
   }
+
   
   /* .photo:hover{
     filter: grayscale(0);
