--- a/css/1style.css
+++ b/css/1style.css
@@ -110,17 +110,17 @@ header{
   max-height: 800px;
   height: 100%;
 } */
-img.logo{
+/* img.logo{
   position: absolute;
   width: 20%;
   top: 30%;
-  /* height: 20%; */
+  height: 20%;
   margin-right:40%;
   margin-left:40%;
-  /* background-color: red; */
+  background-color: red;
   filter: invert();
 
-}
+} */
 
 .tate{
   position:  absolute;
