--- a/css/1style.css
+++ b/css/1style.css
@@ -343,12 +343,12 @@ footer{
     margin-left: auto; 
     margin-right: auto; 
     filter: none;
-    transition-property:all;
+    /* transition-property:all; */
     /* transition-duration: 1s; */
     /* transition-timing-function: cubic-bezier(.29, 1.01, 1, -0.68); */
     /* transition-timing-function: cubic-bezier(0.19, 1, 0.22, 1); */
-    transition-timing-function:ease-out;
-    transition-delay: 0.6s 
+    /* transition-timing-function:ease-out; */
+    /* transition-delay: 0.6s  */
   }
 
   
