--- a/css/1style.css
+++ b/css/1style.css
@@ -197,18 +197,21 @@ header{
   margin-right: auto; 
   filter: grayscale(100%);
   transition-duration: 1s;
+  box-shadow: 0 10px 25px 0 rgba(0, 0, 0, .2);
+  /* box-shadow: inset 0 10px 25px 0 rgba(255, 255, 255, .5); */
   /* opacity: 0.1; */
   /* margin-top: 40%; */
 }
-/* .photo0{
-  margin-top: 0%;
-  margin-bottom: 70%;
+.photo0{
+  margin-top: 60%;
+  margin-bottom: 0%;
   width:100%;
   margin-left: auto; 
   margin-right: auto; 
-  filter: none;
+  filter: grayscale(100%);
   transition-duration: 1s;
-} */
+}
+
 
 .photo:hover{
   filter: grayscale(0);
@@ -343,6 +346,7 @@ footer{
     margin-left: auto; 
     margin-right: auto; 
     filter: none;
+  
     /* transition-property:all; */
     /* transition-duration: 1s; */
     /* transition-timing-function: cubic-bezier(.29, 1.01, 1, -0.68); */
