--- a/css/1style.css
+++ b/css/1style.css
@@ -346,7 +346,7 @@ footer{
     margin-left: auto; 
     margin-right: auto; 
     filter: none;
-  
+    box-shadow: 0 10px 25px 0 rgba(0, 0, 0, .2);
     /* transition-property:all; */
     /* transition-duration: 1s; */
     /* transition-timing-function: cubic-bezier(.29, 1.01, 1, -0.68); */
@@ -355,14 +355,18 @@ footer{
     /* transition-delay: 0.6s  */
   }
 
-  
-  /* .photo:hover{
-    filter: grayscale(0);
-    transform: rotate(180deg);
-    transform:translateX(80px) translateY(0px) rotate(0deg);
-    opacity: 1;
-    width: 120%;
-  } */
+  .photo0{
+    margin-top: 60%;
+    margin-bottom: 0%;
+    /* width: 800px; */
+    width:100%;
+    margin-left: auto; 
+    margin-right: auto; 
+    
+    /* box-shadow: inset 0 10px 25px 0 rgba(255, 255, 255, .5); */
+    /* opacity: 0.1; */
+    /* margin-top: 40%; */
+  }
 
   .tate{
     display: none;
