--- a/css/1style.css
+++ b/css/1style.css
@@ -65,10 +65,10 @@ header{
 
 .cap5 {
   /* top:0; */
-  font-size: 30px;
+  font-size: 50px;
   margin-right:20%;
   margin-left:10%;
-  margin-top:0;
+  margin-top:10px;
   margin-bottom: 0;
   /* text-align: center; */
   /* background:transparent;   */
