--- a/css/style.css
+++ b/css/style.css
@@ -95,10 +95,10 @@ img.logo{
 
 .cap5 {
   /* top:0; */
-  font-size: 30px;
+  font-size: 50px;
   margin-right:20%;
   margin-left:10%;
-  margin-top:0;
+  margin-top:10px;
   margin-bottom: 0;
   /* text-align: center; */
   background:transparent;  
