--- a/css/1style.css
+++ b/css/1style.css
@@ -65,10 +65,10 @@ header{
 
 .cap5 {
   /* top:0; */
-  font-size: 50px;
+  font-size: 30px;
   margin-right:20%;
   margin-left:10%;
-  margin-top:10px;
+  margin-top:0;
   margin-bottom: 0;
   /* text-align: center; */
   /* background:transparent;   */
@@ -78,7 +78,7 @@ header{
 }
 
 .nav{
-  padding: 10px;
+  /* padding: 10px; */
   min-width: 400px;
   /* margin-left: 30%; */
   /* background-color: red; */
@@ -86,7 +86,7 @@ header{
 }
 .menu-item {
   list-style: none;
-  background: transparent;
+  /* background: red; */
   margin-right: 20px;
   margin-top: 10px;
   display: inline;
@@ -287,8 +287,9 @@ footer{
    
    #nav1{
      margin-right: 0;
-     /* margin-left: auto; */
-     /* background: white; */
+     margin-left: 0;
+     padding-left: 0;
+     background: white;
   
      
    }
@@ -302,7 +303,7 @@ footer{
   .menu-item{
     font-size: 20px;
     list-style: none;
-    background: transparent;
+    background:red;
     /* margin-right: 0; */
     /* padding-left:0 ; */
     text-align: right;
