--- a/css/4style.css
+++ b/css/4style.css
@@ -58,10 +58,10 @@ header{
  
  .cap5 {
    /* top:0; */
-   font-size: 50px;
+   font-size: 30px;
    margin-right:20%;
    margin-left:10%;
-   margin-top:10px;
+   margin-top:0;
    margin-bottom: 0;
    /* text-align: center; */
    /* background:transparent;   */
