--- a/css/3style.css
+++ b/css/3style.css
@@ -54,35 +54,42 @@ header{
    /* background:transparent;   */
    min-width: 100px;
   }
- .nav{
-   padding: 10px;
-   min-width: 300px;
-   /* background-color: red; */
- }
- .menu-item {
-   list-style: none;
-   background: transparent;
-   margin-right: 20px;
-   display: inline;
-   
- }
- 
- 
- 
- .insta{
-   background:transparent;
-   color:black;
-   text-align: center;
-   /* width: 50%; */
-   margin: auto;
-   /* 上下右左 */
-   height: 30px;
-   width: 50px;
-   min-width: 50px;
-   filter: invert();
- 
- }
-   
+
+
+
+.items{
+  min-width: 300px;
+}
+.menu-item {
+ list-style: none;
+ /* background: red; */
+ margin-right: 20px;
+ margin-top: 10px;
+ display: inline;
+}
+
+.insta{
+ margin-top: 5px;
+ /* background:red; */
+ color:black;
+ text-align: center;
+ height: 30px;
+ width: 50px;
+ min-width: 50px;
+ filter: invert();
+}
+.youtube{
+ margin-top: 5px;
+ /* background:blue; */
+ color:black;
+ text-align: center;
+ height: 30px;
+ width: 40px;
+ min-width: 30px;
+ filter: invert();
+}
+
+
 
   
 
@@ -234,6 +241,10 @@ header{
   .insta{
     display:none;
    }
+   .youtube{
+    display:none;
+   }
+
 
 
  }
