--- a/css/2style.css
+++ b/css/2style.css
@@ -82,34 +82,41 @@ header{
  
 }
 
-.nav{
-  padding: 10px;
-  min-width: 300px;
-  /* background-color: red; */
-}
 .menu-item {
   list-style: none;
   background: transparent;
   margin-right: 20px;
   display: inline;
-  
 }
 
-
+.items{
+  min-width: 300px;
+}
 
 .insta{
-  background:transparent;
-  color:black;
-  text-align: center;
-  /* width: 50%; */
-  margin: auto;
-  /* 上下右左 */
-  height: 30px;
-  width: 50px;
-  min-width: 50px;
-  filter: invert();
-
+ margin-top: 5px;
+ /* background:red; */
+ color:black;
+ text-align: center;
+ height: 30px;
+ width: 50px;
+ min-width: 50px;
+ filter: invert();
 }
+.youtube{
+ margin-top: 5px;
+ /* background:blue; */
+ color:black;
+ text-align: center;
+ height: 30px;
+ width: 40px;
+ min-width: 30px;
+ filter: invert();
+}
+
+
+
+
   
 a.concept{
   font-size: 10px;
@@ -196,6 +203,9 @@ a.concept{
   }
 
   .insta{
+    display:none;
+   }
+   .youtube{
     display:none;
    }
 
