--- a/css/3style.css
+++ b/css/3style.css
@@ -222,7 +222,9 @@ header{
     width: 75%;
     /* margin-bottom: ; */
   }
-
+  .items{
+    min-width: 100px;
+ }
 
   .menu-item{
     list-style: none;
