--- a/css/1style.css
+++ b/css/1style.css
@@ -288,7 +288,7 @@ footer{
  }
  .menu-item{
    list-style: none;
-   background: red;
+   /* background: red; */
    /* margin-right: 0; */
    /* padding-left:0 ; */
    text-align: right;
