--- a/css/3style.css
+++ b/css/3style.css
@@ -6,7 +6,8 @@ body {
   justify-content: center;
   /* background: linear-gradient(to bottom, white, black); */
   /* font-family: 'Ropa Sans', sans-serif; */
-  font-family: 'helvetica', sans-serif;
+  /* font-family: ' a-otf-midashi-go-mb31-pr6n ',  */
+ 
   display: block;
   /* height: 100%; */
   /* width:100%; */
