--- a/css/2style.css
+++ b/css/2style.css
@@ -55,6 +55,7 @@ header{
   background: black;
   /* background: transparent; */
   z-index: 2;
+  /* opacity: 0.8; */
  /* justify-content: center; */
   /* align-items: center; */
   /* ?????? */
@@ -152,6 +153,7 @@ a.concept{
     padding: 5px;
     background:black;
     /* background: rgb(236, 236, 236); */
+    opacity: 0.8;
     height: auto;
     z-index: 2;
     padding-bottom:0 !important;
