--- a/css/3style.css
+++ b/css/3style.css
@@ -38,6 +38,7 @@ header{
   padding: 5px;
   background: black;
   z-index: 2;
+  /* opacity: 0.7; */
 }
  
  
@@ -197,6 +198,7 @@ header{
     height: auto;
     z-index: 2;
     padding-bottom:0 !important;
+    opacity: 0.8;
   }
    
    #nav1{
