--- a/css/4style.css
+++ b/css/4style.css
@@ -37,6 +37,7 @@ header{
   padding: 5px;
   background: black;
   z-index: 2;
+  
 }
  
  
@@ -196,6 +197,7 @@ header{
     height: auto;
     z-index: 2;
     padding-bottom:0 !important;
+    opacity: 0.7;
   }
    
    #nav1{
