--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,7 @@ header{
    background: black;
    /* background: transparent; */
    z-index: 2;
+
   /* justify-content: center; */
    /* align-items: center; */
    /* ?????? */
@@ -241,6 +242,7 @@ footer{
      height: auto;
      z-index: 2;
      padding-bottom:0 !important;
+     opacity: 0.7;
     /* justify-content: center; */
      /* align-items: center; */
      /* ?????? */
