--- a/css/style.css
+++ b/css/style.css
@@ -70,8 +70,8 @@ header{
  }
  
 
-img.main{
-  width: 130%;
+video.main{
+  width: 100%;
   /* height: 100%; */
   margin-top:2%;
   margin-bottom: auto;
