--- a/css/purple.css
+++ b/css/purple.css
@@ -5,8 +5,8 @@ body {
   align-items: center;
   justify-content: center;
   /* background: linear-gradient(to bottom, white, black); */
-  /* font-family: 'Ropa Sans', sans-serif; */
-  font-family: 'helvetica', sans-serif;
+  font-family: 'Ropa Sans', sans-serif;
+  /* font-family: 'helvetica', sans-serif; */
   display: block;
   
 
