--- a/css/5style.css
+++ b/css/5style.css
@@ -6,11 +6,7 @@ body {
   justify-content: center;
   /* background: linear-gradient(to bottom, white, black); */
   /* font-family: 'Ropa Sans', sans-serif; */
-     font-family: Gill Sans Extrabold, sans-serif;
-     /* font-family: Times, Times New Roman, Georgia, serif; */
-
-  /* font-family: ' a-otf-midashi-go-mb31-pr6n ',  */
-
+  font-family: 'helvetica', sans-serif;
   display: block;
   /* height: 100%; */
   /* width:100%; */
@@ -41,7 +37,7 @@ header{
   padding: 5px;
   background: black;
   z-index: 2;
-  /* opacity: 0.7; */
+  
 }
  
  
@@ -50,7 +46,6 @@ header{
  
 .cap5 {
    /* top:0; */
-
    font-size: 30px;
    margin-right:20%;
    margin-left:10%;
@@ -100,10 +95,7 @@ header{
   
 
 
-.text1{
-  /* font-family: a-otf-midashi-go-mb31-pr6n, sans-serif; */
-  font-style: normal;
-  font-weight: 600;
+.member{
   margin-top:150px;
  margin-bottom: 100px;
  margin-right:auto;
@@ -111,16 +103,8 @@ header{
  /* height: 60%; */
  /* background: rebeccapurple; */
  width: 60%;  
-}
-h2.text1{
-  text-align: center;
-}
 
-
-.text2{
-  text-align: center;
 }
-
 .background{
   margin-top: 0;
  margin-bottom: 0;
@@ -213,7 +197,7 @@ h2.text1{
     height: auto;
     z-index: 2;
     padding-bottom:0 !important;
-    opacity: 0.8;
+    opacity: 0.7;
   }
    
    #nav1{
@@ -225,29 +209,12 @@ h2.text1{
    }
    .cap5 {
     font-size: 30px;
-    
-    /* margin-left:10%; */
-    /* background:red;   */
-    /* color:white!important; */
-  }
-
-    
-  .a{
-    font-size: 1px;
-  }
-  .member{
-    margin-top: 100px;
-    width: 75%;
-    /* margin-bottom: ; */
-  }
-  .cap5 {
-    font-size: 30px;
     margin-right: 0;
   }
+
   .items{
     min-width: 100px;
  }
-
  .menu-item{
   list-style: none;
   /* background: red; */
@@ -273,9 +240,6 @@ h2.text1{
    .youtube{
     display:none;
    }
-   .text1{
-   width: 80%;  
-  }
 
 
 
