--- a/css/4style.css
+++ b/css/4style.css
@@ -117,13 +117,7 @@ h2.text1{
 }
 
 
-.text2{
-  text-align: center;
 
-}
-a.text2{
-  margin-top: 2px;
-}
 
 
 .background{
@@ -137,7 +131,7 @@ a.text2{
 }
 
 #all{
-  margin-top: 5%;
+  /* margin-top: 5%; */
   display: flex;
   /* background: blueviolet; */
   /* object-fit: cover;  */
