--- a/css/1style.css
+++ b/css/1style.css
@@ -259,7 +259,7 @@ footer{
      background:black;
      /* background: rgb(236, 236, 236); */
      z-index: 2;
-     opacity: 0.8;
+     /* opacity: 0.8; */
     /* justify-content: center; */
      /* align-items: center; */
      /* ?????? */
