--- a/css/2style.css
+++ b/css/2style.css
@@ -160,7 +160,7 @@ a.concept{
     padding: 5px;
     background:black;
     /* background: rgb(236, 236, 236); */
-    opacity: 0.8;
+    /* opacity: 0.8; */
     height: auto;
     z-index: 2;
     padding-bottom:0 !important;
