--- a/css/3style.css
+++ b/css/3style.css
@@ -174,7 +174,7 @@ header{
     height: auto;
     z-index: 2;
     padding-bottom:0 !important;
-    opacity: 0.8;
+    /* opacity: 0.8; */
   }
    
    #nav1{
