--- a/css/3style.css
+++ b/css/3style.css
@@ -115,6 +115,10 @@ header{
 
 .text2{
   text-align: center;
+  box-shadow: 0 10px 25px 0 rgba(0, 0, 0, .3);
+  padding-top: 10px;
+  padding-bottom: 10px;
+
 }
 
 .background{
