--- a/css/1style.css
+++ b/css/1style.css
@@ -284,16 +284,20 @@ footer{
    font-size: 30px;
    margin-right: 0;
  }
- 
+ .items{
+  min-width: 100px;
+}
  .menu-item{
   list-style: none;
-  /* background: red; */
-  /* margin-right: 0; */
-  /* padding-left:0 ; */
+  /* background: white; */
+
+  /* box-shadow: inset 10px 10px 25px 0 rgba(255, 255, 255, .2); */
+  padding-top:10px ;
+  padding-bottom:10px ;
   text-align: right;
   display: block;
   margin-top: 50px;
-  font-size: 30px;
+  font-size: 20px;
 }
 
   .navbar-toggler{
@@ -308,9 +312,7 @@ footer{
     display:none;
   
    }
-   .items{
-    min-width: 100px;
- }
+
 
 
 
