--- a/css/3style.css
+++ b/css/3style.css
@@ -211,15 +211,13 @@ header{
 
  .menu-item{
   list-style: none;
-  /* background: red; */
-  /* margin-right: 0; */
-  /* padding-left:0 ; */
+  padding-top:10px ;
+  padding-bottom:10px ;
   text-align: right;
   display: block;
   margin-top: 50px;
-  font-size: 30px;
+  font-size: 20px;
 }
-
   .navbar-toggler{
     filter:invert();
   }
