--- a/css/4style.css
+++ b/css/4style.css
@@ -5,11 +5,7 @@ body {
   align-items: center;
   justify-content: center;
   /* background: linear-gradient(to bottom, white, black); */
-  /* font-family: 'Ropa Sans', sans-serif; */
-     font-family: Gill Sans Extrabold, sans-serif;
-     /* font-family: Times, Times New Roman, Georgia, serif; */
 
-  /* font-family: ' a-otf-midashi-go-mb31-pr6n ',  */
 
   display: block;
   /* height: 100%; */
@@ -20,11 +16,8 @@ body {
 
     width: 100%;
     /* background: blue; */
-   
     margin-top: auto;
     margin-bottom: auto;
-    /* margin-right:20%;
-    margin-left:20%; */
     background-color:  white;
   
 } 
@@ -50,6 +43,9 @@ header{
  
 .cap5 {
    /* top:0; */
+ 
+
+
 
    font-size: 30px;
    margin-right:20%;
@@ -101,9 +97,10 @@ header{
 
 
 .text1{
-  /* font-family: a-otf-midashi-go-mb31-pr6n, sans-serif; */
-  font-style: normal;
-  font-weight: 600;
+  font-family: futura-pt, sans-serif;
+  font-weight: 400;
+  font-style: bold;
+  
   margin-top:100px;
  margin-bottom: 100px;
  margin-right:auto;
