--- a/css/1style.css
+++ b/css/1style.css
@@ -110,6 +110,12 @@ header{
 }
 
 .tate{
+  font-family: futura-pt, sans-serif;
+  font-weight: 400;
+  font-style: bold;
+
+
+  
   position:  absolute;
   top: 50px;  
   right:40px;
