--- a/css/1style.css
+++ b/css/1style.css
@@ -8,7 +8,10 @@ body {
   /* background: linear-gradient(to bottom, white, black); */
 
   /* font-family: 'Ropa Sans', sans-serif; */
-  font-family: 'helvetica', sans-serif;
+  /* font-family: 'helvetica', sans-serif; */
+  font-family: futura-pt,a-otf-midashi-go-mb31-pr6n, sans-serif;
+  font-weight: 600;
+  font-style: normal;
   /* display: inline !important; */
   
   /* height: 100%; */
@@ -115,9 +118,9 @@ header{
   font-style: bold;
 
 
-  
+
   position:  absolute;
-  top: 50px;  
+  top: 100px;  
   right:40px;
   font-size:70px;
   transition-property:all;
@@ -131,20 +134,7 @@ header{
   font-weight: 100;
 }
 
-/* .Cap:hover{
-  position:  absolute;     
-  top: 200px;  
-  left:50%;
-  width: 80px;
-  height: 80px;
-  width: 1000px;
-  height: 1000px;
-  font-size:100px;
-  /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
-  /* font-weight: 100; 
 
-
-} */
 
 
 
@@ -265,16 +255,7 @@ footer{
      background:black;
      /* background: rgb(236, 236, 236); */
      z-index: 2;
-     /* opacity: 0.8; */
-    /* justify-content: center; */
-     /* align-items: center; */
-     /* ?????? */
-     /* position: relative; */
-     /* top: 0px; */
-     /* background:rgb(237, 59, 10,10); */
-     /* z-index: 2; */ 
-     /* 重なりの順序 */
-     /* box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25); */
+
    }
    
    
