--- a/css/2style.css
+++ b/css/2style.css
@@ -55,16 +55,8 @@ header{
   background: black;
   /* background: transparent; */
   z-index: 2;
-  /* opacity: 0.8; */
- /* justify-content: center; */
-  /* align-items: center; */
-  /* ?????? */
-  /* position: relative; */
-  /* top: 0px; */
   /* background:rgb(237, 59, 10,10); */
-  /* z-index: 2; */ 
-  /* 重なりの順序 */
-  /* box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25); */
+
 }
 
 
@@ -117,9 +109,9 @@ header{
 
 
 .text1{
-  font-family: futura-pt, sans-serif;
-  font-weight: 400;
-  font-style: bold;
+  font-family: futura-pt,a-otf-midashi-go-mb31-pr6n, sans-serif;
+  font-weight: 600;
+  font-style: normal;
 
   margin-top: 10%;
   margin-bottom: 0;
