--- a/css/3style.css
+++ b/css/3style.css
@@ -5,11 +5,7 @@ body {
   align-items: center;
   justify-content: center;
   /* background: linear-gradient(to bottom, white, black); */
-  /* font-family: 'Ropa Sans', sans-serif; */
-     font-family: Gill Sans Extrabold, sans-serif;
-     /* font-family: Times, Times New Roman, Georgia, serif; */
 
-  /* font-family: ' a-otf-midashi-go-mb31-pr6n ',  */
 
   display: block;
   /* height: 100%; */
@@ -101,9 +97,14 @@ header{
 
 
 .text1{
-  font-family: futura-pt, sans-serif;
-  font-weight: 400;
-  font-style: bold;
+  font-family: futura-pt,a-otf-midashi-go-mb31-pr6n, sans-serif;
+  font-weight: 600;
+  font-style: normal;
+
+
+/* font-family:  sans-serif;
+font-weight: 300;
+font-style: normal; */
 
 
 
