--- a/css/style.css
+++ b/css/style.css
@@ -70,16 +70,25 @@ header{
  }
  
 
-video.main{
+/* video.main{
   width: 100%;
-  /* height: 100%; */
   margin-top:2%;
   margin-bottom: auto;
   background-size:cover ;
+} */
 
-  /* min-width: 900px; */
-  /* max-height: 800px; */
-  /* height: 100%; */
+video.main{
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  /* background: url(./sapmle.png) no-repeat center center/cover; */
+  background-size: cover;
+  
+}
+video {
+  min-width: 100%;
+  min-height: 100vh;
+  z-index: 1;
 }
 
 img.logo{
@@ -307,6 +316,7 @@ footer{
   /* background: url(./sapmle.png) no-repeat center center/cover; */
   background-size: cover;
   transform: rotate(90deg ); 
+  
 }
 video {
   min-width: 100%;
