--- a/css/style.css
+++ b/css/style.css
@@ -78,12 +78,14 @@ header{
 } */
 
 video.main{
-  position: relative;
-  width: 100%;
+  position: absolute;
+
+  /* width: 100vh; */
   height: 100vh;
   /* background: url(./sapmle.png) no-repeat center center/cover; */
-  background-size: cover;
-  
+  /* background-size: cover; */
+  margin-left: auto;
+  margin-right: auto;
 }
 video {
   min-width: 100%;
@@ -311,8 +313,8 @@ footer{
 
  video.main{
   position: relative;
-  width: 100%;
-  height: 100vh;
+  width: 100vh;
+  height: 100%;
   /* background: url(./sapmle.png) no-repeat center center/cover; */
   background-size: cover;
   transform: rotate(90deg ); 
