--- a/css/purple.css
+++ b/css/purple.css
@@ -5,13 +5,9 @@ body {
   align-items: center;
   justify-content: center;
   /* background: linear-gradient(to bottom, white, black); */
-  /* font-family: 'gil sans','helvetica' sans-serif; */
-  font-family: a-otf-midashi-go-mb31-pr6n, sans-serif;
+  font-family: futura-pt,a-otf-midashi-go-mb31-pr6n, sans-serif;
+  font-weight: 600;
   font-style: normal;
-  font-weight: 300;
-  /* font-family: 'helvetica', sans-serif; */
-  
-  /* font-family: cursive; */
   display: block;
   
 
