--- a/css/style.css
+++ b/css/style.css
@@ -252,7 +252,7 @@ footer{
      height: auto;
      z-index: 2;
      padding-bottom:0 !important;
-     /* opacity: 0.7; */
+     opacity: 0.9;
     /* justify-content: center; */
      /* align-items: center; */
      /* ?????? */
