--- a/css/3style.css
+++ b/css/3style.css
@@ -122,7 +122,16 @@ font-style: normal; */
   /* box-shadow: 0 10px 25px 0 rgba(0, 0, 0, .3); */
   padding-top: 10px;
   padding-bottom: 10px;
+}
 
+.yt_logo {
+  width: 10%;
+  height: 10%;
+}
+
+.ig_logo {
+  width: 5%;
+  height: 5%;
 }
 
 .background{
@@ -239,6 +248,16 @@ font-style: normal; */
    .text1{
    width: 80%;  
 
+  }
+
+  .yt_logo {
+    width: 30%;
+    height: 30%;
+  }
+  
+  .ig_logo {
+    width: 15%;
+    height: 15%;
   }
 
 
