--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,10 @@ header{
    /* 重なりの順序 */
    /* box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25); */
  }
+
+div {
+  background-color: black!important;
+}
  
 
 /* video.main{
