--- a/css/2style.css
+++ b/css/2style.css
@@ -131,12 +131,16 @@ header{
 
 }
 .photolast{
-  margin-left: 35%;
-  margin-right: 35%;
+  margin-left: 40%;
+  margin-right: 40%;
   margin-top: 10%;
-  margin-bottom:30% ;
-  width: 30%;
-
+  width: 20%;
+}
+.photolast2{
+  margin-left: 40%;
+  margin-right: 40%;
+  margin-bottom:10% ;
+  width: 20%;
 }
 
 /*-----  SP  ---- */
