--- a/css/2style.css
+++ b/css/2style.css
@@ -52,8 +52,9 @@ header{
   width: 100%; 
   height: 50px;
   padding: 5px;
-  background: black;
+  /* background: black; */
   /* background: transparent; */
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
   z-index: 2;
   /* background:rgb(237, 59, 10,10); */
 
@@ -94,7 +95,7 @@ header{
  height: 30px;
  width: 50px;
  min-width: 50px;
- filter: invert();
+ /* filter: invert(); */
 }
 .youtube{
  margin-top: 5px;
@@ -104,7 +105,7 @@ header{
  height: 30px;
  width: 40px;
  min-width: 30px;
- filter: invert();
+ /* filter: invert(); */
 }
 
 
