--- a/css/purple.css
+++ b/css/purple.css
@@ -29,6 +29,7 @@ body {
 } 
 
 header{
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
   display:flex !important;
   position:fixed;
   top:0;
