--- a/css/2style.css
+++ b/css/2style.css
@@ -156,7 +156,7 @@ header{
     left:0;
     width: 100%; 
     padding: 5px;
-    background:black;
+    /* background:black; */
     /* background: rgb(236, 236, 236); */
     /* opacity: 0.8; */
     height: auto;
