--- a/css/3style.css
+++ b/css/3style.css
@@ -182,7 +182,7 @@ font-style: normal; */
     left:0;
     width: 100%; 
     padding: 5px;
-    background:black;
+    /* background:black; */
     /* background: rgb(236, 236, 236); */
     height: auto;
     z-index: 2;
