--- a/css/4style.css
+++ b/css/4style.css
@@ -32,7 +32,8 @@ header{
   width: 100%; 
   height: 50px;
   padding: 5px;
-  background: black;
+  /* background: black; */
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
   z-index: 2;
   /* opacity: 0.7; */
 }
@@ -100,10 +101,6 @@ header{
   font-family: futura-pt,a-otf-midashi-go-mb31-pr6n, sans-serif;
   font-weight: 600;
   font-style: normal;
-
-
-
-  
   margin-top:100px;
  margin-bottom: 100px;
  margin-right:auto;
@@ -203,13 +200,13 @@ h2.text1{
 
 
   header{
-    display: flex!important;;
+    display: flex!important;
     position:fixed;
     top:0;
     left:0;
     width: 100%; 
     padding: 5px;
-    background:black;
+    /* background:black; */
     /* background: rgb(236, 236, 236); */
     height: auto;
     z-index: 2;
