--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,6 @@ body {
   /* 表示するコンテナの大きさに基づいて、背景画像を調整 
   background-size: auto 100%;
   画像が表示される前の背景 */
-  background: black;
 
 } 
 
@@ -54,7 +53,6 @@ header{
    width: 100%; 
    height: 50px;
    padding: 5px;
-   background: black;
    /* background: transparent; */
    z-index: 2;
 
@@ -67,12 +65,7 @@ header{
    /* z-index: 2; */ 
    /* 重なりの順序 */
    /* box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25); */
-   background-color: black!important;
  }
-
-div.bb {
-  background-color: black!important;
-}
  
 
 /* video.main{
@@ -92,11 +85,10 @@ video.main{
   /* background-size: cover; */
   margin-left: auto;
   margin-right: auto;
-  background-color: black;
 }
 video {
   min-width: 100%;
-  min-height: 100vh;
+  min-height: 100%;
   z-index: 1;
 }
 
@@ -144,7 +136,6 @@ img.logo{
  width: 50px;
  min-width: 50px;
  filter: invert();
- color: black !important;
 }
 .youtube{
  margin-top: 5px;
@@ -154,7 +145,6 @@ img.logo{
  width: 40px;
  min-width: 30px;
  filter: invert();
- color: black !important;
 }
 .tate{
   /* position: absolute; */
@@ -223,7 +213,6 @@ footer{
    width: 100%; 
    height: 50px;
    padding: 5px;
-   background: black;
    /* background: transparent; */
    z-index: 2;
  }
@@ -250,7 +239,6 @@ footer{
      left:0;
      width: 100%; 
      padding: 5px;
-     background:black;
      /* background: rgb(236, 236, 236); */
      height: auto;
      z-index: 2;
@@ -322,7 +310,6 @@ footer{
   body{
     min-width: initial;
     margin-top: 0;
-    background-color: black;
   }
 
   #all{
