--- a/css/3style.css
+++ b/css/3style.css
@@ -155,6 +155,7 @@ font-style: normal; */
   transition-duration: 1s;
   /* opacity: 0.1; */
   /* margin-top: 40%; */
+    /* box-shadow: 0 10px 25px 0 rgba(0, 0, 0, .4); */
 }
 .photolast{
   margin-left: 40%;
