--- a/css/1style.css
+++ b/css/1style.css
@@ -41,7 +41,7 @@ background-color: black;
 } 
 
 header{
-
+  box-shadow: 0 10px 25px 0 rgba(0, 0, 0, .3);
  display:flex !important;
  position:fixed;
   top:0;
@@ -49,7 +49,7 @@ header{
   width: 100%; 
   height: 50px;
   padding: 5px;
-  background: black;
+  /* background: black; */
   /* background: transparent; */
   z-index: 2;
  /* justify-content: center; */
@@ -99,7 +99,7 @@ header{
   height: 30px;
   width: 50px;
   min-width: 50px;
-  filter: invert();
+  /* filter: invert(); */
 }
 .youtube{
   margin-top: 5px;
@@ -109,7 +109,7 @@ header{
   height: 30px;
   width: 40px;
   min-width: 30px;
-  filter: invert();
+  /* filter: invert(); */
 }
 
 .tate{
@@ -252,7 +252,7 @@ footer{
      width: 100%; 
      padding: 5px;
      height: auto;
-     background:black;
+     /* background:black; */
      /* background: rgb(236, 236, 236); */
      z-index: 2;
 
