--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@ img.logo{
  height: 30px;
  width: 50px;
  min-width: 50px;
- filter: invert();
+ color:black;
 }
 .youtube{
  margin-top: 5px;
@@ -144,7 +144,7 @@ img.logo{
  height: 30px;
  width: 40px;
  min-width: 30px;
- filter: invert();
+ color:black;
 }
 .tate{
   /* position: absolute; */
@@ -295,7 +295,7 @@ footer{
   }
 
  video.main{
-  position: relative;
+  /* position: relative; */
   width: 100%;
   height: 100%;
   /* background: url(./sapmle.png) no-repeat center center/cover; */
