--- a/css/style.css
+++ b/css/style.css
@@ -296,6 +296,7 @@ footer{
 
  video.main{
   /* position: relative; */
+  position: absolute;
   width: 100%;
   height: 100%;
   /* background: url(./sapmle.png) no-repeat center center/cover; */
