--- a/css/style.css
+++ b/css/style.css
@@ -296,11 +296,10 @@ footer{
 
  video.main{
   /* position: relative; */
-  position: absolute;
   width: 100%;
   height: 100%;
   /* background: url(./sapmle.png) no-repeat center center/cover; */
-  background-size: auto;
+  /* background-size: auto; */
   transform: rotate(90deg ); 
   margin-left: 0%;
   margin-right: 0%;
