--- a/css/1style.css
+++ b/css/1style.css
@@ -41,7 +41,7 @@ background-color: black;
 } 
 
 header{
-  box-shadow: 0 10px 25px 0 rgba(0, 0, 0, .3);
+ box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
  display:flex !important;
  position:fixed;
   top:0;
@@ -117,9 +117,8 @@ header{
   font-weight: 400;
   font-style: bold;
 
-
-
-  position:  absolute;
+ 
+  position:  fixed;
   top: 100px;  
   right:40px;
   font-size:70px;
