--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ header{
    width: 100%; 
    height: 50px;
    padding: 5px;
+     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
    /* background: transparent; */
    z-index: 2;
 
@@ -135,7 +136,7 @@ img.logo{
  height: 30px;
  width: 50px;
  min-width: 50px;
- filter: invert();
+ /* filter: invert(); */
 }
 .youtube{
  margin-top: 5px;
@@ -144,7 +145,7 @@ img.logo{
  height: 30px;
  width: 40px;
  min-width: 30px;
- filter: invert();
+ /* filter: invert(); */
 }
 .tate{
   /* position: absolute; */
