--- a/css/style.css
+++ b/css/style.css
@@ -296,16 +296,14 @@ footer{
   }
 
  video.main{
-  position: relative;
-  width: 100%;
-  height: 100%;
+  position: absolute; 
+  top:0; 
+  width: 100%; 
+  height: 100%; 
+  background: #FFF; 
+  z-index: 9999999999;
   /* background: url(./sapmle.png) no-repeat center center/cover; */
-  background-size: auto;
   transform: rotate(90deg ); 
-  margin-left: 0%;
-  margin-right: 0%;
-  margin-top: 0%;
-  margin-bottom: 0%;
 }
    
   body{
