--- a/css/4style.css
+++ b/css/4style.css
@@ -35,7 +35,9 @@ header{
   /* background: black; */
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
   z-index: 2;
-  /* opacity: 0.7; */
+  /* background-color: white; */
+  /* opacity: 0.8;
+  filter: blur(); */
 }
  
  
