--- a/css/style.css
+++ b/css/style.css
@@ -53,9 +53,11 @@ header{
    width: 100%; 
    height: 50px;
    padding: 5px;
-     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
    /* background: transparent; */
    z-index: 2;
+   background-color: white;
+
 
   /* justify-content: center; */
    /* align-items: center; */
