--- a/css/2style.css
+++ b/css/2style.css
@@ -52,6 +52,8 @@ header{
   width: 100%; 
   height: 50px;
   padding: 5px;
+  background: white;
+  opacity: 0.8;
   /* background: black; */
   /* background: transparent; */
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
