--- a/css/3style.css
+++ b/css/3style.css
@@ -21,7 +21,6 @@ body {
     margin-bottom: auto;
     /* margin-right:20%;
     margin-left:20%; */
-    background-color:  white;
   
 } 
 
@@ -39,6 +38,8 @@ header{
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
   z-index: 2;
   /* opacity: 0.7; */
+  background-color:  white;
+  opacity: 0.8;
 }
  
  
