--- a/css/4style.css
+++ b/css/4style.css
@@ -36,6 +36,8 @@ header{
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
   z-index: 2;
   /* background-color: white; */
+  background-color:  white;
+  opacity: 0.8;
   /* opacity: 0.8;
   filter: blur(); */
 }
