--- a/css/style.css
+++ b/css/style.css
@@ -56,8 +56,9 @@ header{
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
    /* background: transparent; */
    z-index: 2;
-   background-color: white;
-
+  
+   /* background: white;
+   opacity: 0.8; */
 
   /* justify-content: center; */
    /* align-items: center; */
@@ -113,9 +114,10 @@ img.logo{
   margin-bottom: 0;
   /* text-align: center; */
   background:transparent;  
-  /* color: white; */
+  color: rgb(55, 121, 180);
+
   min-width: 100px;
-  filter: invert();
+  /* filter: invert(); */
 }
 
 .menu-item {
